<resources>
    <string name="app_name">WidgetRelay</string>
    <string name="action_get_widget_data">Get Widget Data</string>
    <string name="action_click_widget">Click Widget</string>
    <string name="action_pause_watching">Pause Watching Widgets</string>
    <string name="action_keep_cpu_awake">Keep the CPU Awake</string>
    <string name="event_widget_updated">Widget Updated</string>
    <string name="widget">Widget</string>
    <string name="width_cells">Width (cells)</string>
    <string name="height_cells">Height (cells)</string>
    <string name="query">Element Path</string>
    <string name="widget_value">Widget Value</string>
    <string name="widget_value_description">The value of the selected widget element (text, description or resource id)</string>
    <string name="widget_json">Widget JSON</string>
    <string name="widget_json_description">All extracted widget elements (type, text, description, children) as a JSON object</string>
    <string name="widget_old_value">Previous Widget Value</string>
    <string name="widget_old_value_description">The value of the selected widget element before the update</string>
    <string name="widget_changed">Changed Elements</string>
    <string name="widget_changed_description">Array of the paths of all elements that changed in this update</string>
    <string name="widget_setting_state">New State</string>
    <string name="widget_setting_state_description">The state the setting was left in (true or false), useful after a toggle</string>
    <string name="setting_mode_label">State</string>
    <string name="setting_variable_label">Or a Tasker variable</string>
    <string name="setting_variable_hint">%my_state</string>
    <string name="setting_variable_hint_long">Overrides the choice above when filled in. Accepts on/off/toggle, true/false, yes/no or 1/0.</string>
    <string name="mode_on">On</string>
    <string name="mode_off">Off</string>
    <string name="mode_toggle">Toggle</string>
    <string name="mode_pause">Pause</string>
    <string name="mode_resume">Resume</string>
    <string name="setting_pause_description">Pauses the widget monitor. While paused, watched widgets are not loaded in the background and \"Widget Updated\" events do not fire. The list of watched widgets is kept, so resuming picks them all up again.</string>
    <string name="setting_wake_lock_description">Keeps the CPU awake so widget changes are noticed while the screen is off and the device is in Doze. Costs noticeably more battery - a task can switch it on only for the hours you actually need it.</string>
    <string name="label_element_path">Element path (tap an element below)</string>
    <string name="label_selector_path_regex_optional">Selector (path, regex or empty for all changes)</string>
    <string name="label_selector_path_regex_json">Selector (path, regex or empty for widget as JSON)</string>
    <string name="label_selector">Selector (path, text or regex):</string>
    <string name="header_extracted_data">Extracted data:</string>
    <string name="select_widget">Select Widget</string>
    <string name="app_line">App: %1$s</string>
    <string name="widget_line">Widget: %1$s</string>
    <string name="no_widget_selected">No widget selected</string>
    <string name="status_no_widget_selected">No widget selected yet.</string>
    <string name="status_select_widget_first">Select a widget first.</string>
    <string name="status_requesting_permission">Permission needed - requesting via system dialog…</string>
    <string name="status_needs_configuration">Widget needs to be configured first…</string>
    <string name="status_binding_cancelled">Widget binding was canceled.</string>
    <string name="status_configuration_cancelled">Widget configuration was canceled.</string>
    <string name="status_no_host_view">Could not create widget view.</string>
    <string name="status_rebinding">Widget binding was lost (app reinstalled?) - binding the widget again…</string>
    <string name="status_rebind_failed">Widget binding was lost and the widget could not be found. Select it again.</string>
    <string name="status_loading">Loading widget data…</string>
    <string name="status_elements">%1$d elements extracted</string>
    <string name="status_elements_selectable">%1$d elements extracted, %2$d %3$s</string>
    <string name="selectable_with_value">with a value</string>
    <string name="selectable_clickable">clickable</string>
    <string name="selectable_clickable_with_text">clickable with text</string>
    <string name="status_widgets_in_apps">%1$d widgets in %2$d apps</string>
    <string name="toast_select_widget">Please select a widget first</string>
    <string name="toast_select_element">Please select an element from the extracted data</string>
    <string name="toast_overlay_permission">Please allow \"Display over other apps\" - needed to access the widget when Tasker runs the action</string>
    <string name="blurb_size">Size: %1$d x %2$d</string>
    <string name="blurb_selector">Selector: %1$s</string>
    <string name="blurb_get_data">Get \"%1$s\" of widget \"%2$s\" from app \"%3$s\"</string>
    <string name="blurb_get_json">Get all data of widget \"%1$s\" from app \"%2$s\" as JSON</string>
    <string name="blurb_click_selector">Click \"%1$s\" of widget \"%2$s\" from app \"%3$s\"</string>
    <string name="blurb_updated_element">When \"%1$s\" of widget \"%2$s\" from app \"%3$s\" changes</string>
    <string name="blurb_updated_any">When anything in widget \"%1$s\" from app \"%2$s\" changes</string>
    <string name="blurb_pause_on">Pause watching widgets</string>
    <string name="blurb_pause_off">Resume watching widgets</string>
    <string name="blurb_pause_toggle">Toggle watching widgets on or off</string>
    <string name="blurb_pause_variable">Pause watching widgets: %1$s</string>
    <string name="blurb_wake_lock_on">Keep the CPU awake for widget watching</string>
    <string name="blurb_wake_lock_off">Stop keeping the CPU awake for widget watching</string>
    <string name="blurb_wake_lock_toggle">Toggle keeping the CPU awake for widget watching</string>
    <string name="blurb_wake_lock_variable">Keep the CPU awake: %1$s</string>
    <string name="monitor_title">WidgetRelay</string>
    <string name="monitor_channel_name">Widget monitor</string>
    <string name="monitor_channel_description">Shown while widgets are being watched for the \"Widget Updated\" event</string>
    <string name="monitor_fgs_explanation">Hosts home screen widgets in the background so their updates can trigger Tasker events</string>
    <string name="monitor_notification_title">Watching widgets</string>
    <plurals name="monitor_notification_text">
        <item quantity="one">%1$d widget monitored</item>
        <item quantity="other">%1$d widgets monitored</item>
    </plurals>
    <string name="monitor_tagline">Reads, clicks and watches widgets on behalf of Tasker.</string>
    <string name="monitor_state_nothing">Nothing to watch</string>
    <string name="monitor_state_nothing_hint">Add a \"Widget Updated\" event in Tasker (Profile → Event → Plugin → WidgetRelay). Its widget then appears here and is kept loaded in the background.</string>
    <string name="monitor_state_paused">Paused</string>
    <string name="monitor_state_paused_hint">The widgets below are not loaded and \"Widget Updated\" events will not fire until you resume.</string>
    <string name="monitor_state_starting">Starting…</string>
    <string name="monitor_state_starting_hint">Loading the widgets in the background. If this doesn’t change within a few seconds, check the permissions below.</string>
    <plurals name="monitor_state_running">
        <item quantity="one">Watching %1$d widget</item>
        <item quantity="other">Watching %1$d widgets</item>
    </plurals>
    <string name="monitor_state_running_hint">They are loaded invisibly in the background, so Tasker fires as soon as their contents change.</string>
    <string name="monitor_state_partial">Watching %1$d of %2$d widgets</string>
    <string name="monitor_state_partial_hint">%1$d widget could not be loaded - see the reason below it.</string>
    <string name="monitor_state_partial_hint_plural">%1$d widgets could not be loaded - see the reason below each one.</string>
    <string name="monitor_header_permissions">Permissions</string>
    <string name="monitor_header_widgets">Watched widgets</string>
    <string name="monitor_wake_lock">Keep the CPU awake</string>
    <string name="monitor_wake_lock_hint">Catches changes while the screen is off and the device is in Doze. Costs noticeably more battery - leave off unless you miss updates overnight.</string>
    <string name="about_description">WidgetRelay monitors Android widgets in the background and makes their data available to Tasker.\n\nSource code:\nhttps://github.com/CennoxX/WidgetRelay</string>
    <string name="about_licenses">Open source licenses</string>
    <string name="about_view_notice">Full Notice &amp; Changes</string>
    <string name="about_view_license">GNU General Public License (GPLv3)</string>
    <string name="about_license_widgetrelay">WidgetRelay\nCopyright © 2026 CennoxX\nThis program is free software, licensed under the GNU General Public License version 3. See the LICENSE at the bottom for the full license text.\nThis program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY.\n\nThis repository is a fork of TaskerPluginSample.</string>
    <string name="about_license_taskerpluginlibrary">Tasker plugin library\nCopyright © João Dias (joaomgcd) and contributors.\nSource: github.com/joaomgcd/TaskerPluginSample\nLicense: GNU General Public License version 3.</string>
    <string name="about_license_tasker_protocol">Tasker plugin protocol helpers\nTaskerPlugin.java and TaskerIntent.java were written by Pent (dinglisch), the author of Tasker, and are included as distributed with TaskerPluginSample.\nThese files are unmodified.\nReference: tasker.joaoapps.com/plugins.html</string>
    <string name="about_license_kotlin">Kotlin Standard Library\nCopyright © 2010–2026 JetBrains s.r.o.\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="about_license_androidx">AndroidX Libraries\nCopyright © 2018–2026 The Android Open Source Project\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="about_license_gradle">Gradle &amp; Android Gradle Plugin\nCopyright © 2007–2026 Gradle, Inc. and contributors\nLicensed under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0\nUnless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
</resources>